--- a/index.html
+++ b/index.html
@@ -1,12 +1,7 @@
 <!DOCTYPE HTML>
-<!--
-	Tapestry by TEMPLATED
-	templated.co @templatedco
-	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
--->
 <html>
 	<head>
-		<title>Tapestry by TEMPLATED</title>
+		<title>LU ANTAL Fotografia</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -27,16 +22,15 @@
 			<div class="container">
 				<div id="header">
 					<div id="logo">
-						<h1><a href="#">Tapestry</a></h1>
-						<span>by TEMPLATED</span>
+						<h1><a href="#">LU ANTAL</a></h1>
+						<span>by Fotografia</span>
 					</div>
 					<nav id="nav">
 						<ul>
-							<li class="current_page_item"><a href="index.html">Homepage</a></li>
-							<li><a href="threecolumn.html">Three Column</a></li>
-							<li><a href="twocolumn1.html">Two Column #1</a></li>
-							<li><a href="twocolumn2.html">Two Column #2</a></li>
-							<li><a href="onecolumn.html">One Column</a></li>
+							<li class="current_page_item"><a href="index.html">Página inicial</a></li>
+							<li><a href="threecolumn.html">Sobre mim</a></li>
+							<li><a href="twocolumn1.html">Portfólio</a></li>
+							<li><a href="twocolumn2.html">Contato</a></li>
 						</ul>
 					</nav>
 				</div>
