--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		<div class="container">
 			<div class="row">
 				<div id="banner" class="12u">
-					<div class="container"><a href="#"><img src="images/pics01.jpg" alt=""></a></div>
+					<div class="container"><a href="#"><img src="images/lufoto.jpg" alt=""></a></div>
 				</div>
 			</div>
 		</div>
@@ -48,10 +48,9 @@
 				<div class="row divider">
 					<div class="3u">
 						<section>
-							<h2 class="title">Maecenas luctus lectus</h2>
-							<p class="subtitle">In posuere eleifend odio. Quisque semper augue mattis maecenas ligula.</p>
-							<p><a href="#"><img src="images/pics02.jpg" alt=""></a></p>
-							<p class="button-style1"><a href="#">Etiam rhoncus volutpat</a></p>
+							<h2 class="title">Momentos divertidos</h2>
+							<p><a href="#"><img src="images/smash.jpg" alt=""></a></p>
+							<p class="button-style1"><a href="#">SMASH THE CAKE</a></p>
 						</section>
 					</div>
 					<div class="3u">
