--- a/index.html
+++ b/index.html
@@ -55,26 +55,23 @@
 					</div>
 					<div class="3u">
 						<section>
-							<h2 class="title">Etiam posuere augue</h2>
-							<p class="subtitle">Donec leo. Vivamus nibh in augue. Praesent a lacus at urna congue rutrum.</p>
-							<p><a href="#"><img src="images/pics03.jpg" alt=""></a></p>
-							<p class="button-style1"><a href="#">Praesent mattis condimentum</a></p>
+							<h2 class="title">Momentos de muito amor</h2>
+							<p><a href="#"><img src="images/casalbeijo.jpg" alt=""></a></p>
+							<p class="button-style1"><a href="#">ENSAIO FOTOGRÁFICO EM FAMÍLIA</a></p>
 						</section>
 					</div>
 					<div class="3u">
 						<section>
-							<h2 class="title">Fusce ultrices fringilla</h2>
-							<p class="subtitle">Pellentesque pede. Donec pulvinar metus. In eu lectus pulvinar mollis. </p>
-							<p><a href="#"><img src="images/pics04.jpg" alt=""></a></p>
-							<p class="button-style1"><a href="#">Praesent scelerisque</a></p>
+							<h2 class="title">Momentos inesquecíveis</h2>
+							<p><a href="#"><img src="images/saema.jpg" alt=""></a></p>
+							<p class="button-style1"><a href="#">ENSAIO FOTOGRÁFICO DE CASAIS</a></p>
 						</section>
 					</div>
 					<div class="3u">
 						<section>
-							<h2 class="title">Nulla luctus eleifend</h2>
-							<p class="subtitle">In posuere eleifend odio. Quisque semper augue sed maecenas ligula.</p>
-							<p><a href="#"><img src="images/pics05.jpg" alt=""></a></p>
-							<p class="button-style1"><a href="#">Fusce ultrices fringilla</a></p>
+							<h2 class="title">Momentos que não tem preço</h2>
+							<p><a href="#"><img src="images/familia.jpg" alt=""></a></p>
+							<p class="button-style1"><a href="#">ENSAIO FOTOGRÁFICO COM RECÉM NASCIDOS</a></p>
 						</section>
 					</div>
 				</div>
