--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				<div id="header">
 					<div id="logo">
 						<h1><a href="#">LU ANTAL</a></h1>
-						<span>by Fotografia</span>
+						<span>Fotografia</span>
 					</div>
 					<nav id="nav">
 						<ul>
@@ -57,7 +57,7 @@
 						<section>
 							<h2 class="title">Momentos de muito amor</h2>
 							<p><a href="#"><img src="images/casalbeijo.jpg" alt=""></a></p>
-							<p class="button-style1"><a href="#">ENSAIO FOTOGRÁFICO EM FAMÍLIA</a></p>
+							<p class="button-style1"><a href="#">ENSAIO FOTOGRÁFICO DE FAMÍLIA</a></p>
 						</section>
 					</div>
 					<div class="3u">
