--- a/index.html
+++ b/index.html
@@ -104,11 +104,11 @@
 				<div class="row" id="footer-content">
 					<div class="3u" id="box1">
 						<section>
-							<h2>Maecenas luctus lectus</h2>
+							<h2>Lembre-se</h2>
 							<div class="balloon">
-								<blockquote>&ldquo;&nbsp;&nbsp;Donec leo, vivamus ullamcorper fermentum nibh in augue pulvinar ullamcorper metus praesent a lacus at urna congue ullamcorper  rutrum.&nbsp;&nbsp;&rdquo;<br>
+								<blockquote>&ldquo;&nbsp;&nbsp;As melhores e mais belas coisas do mundo muitas vezes não podem ser tocadas, mas podemos eternizá-las em uma fotografia!&nbsp;&nbsp;&rdquo;<br>
 								<br>
-								<strong>&ndash;&nbsp;&nbsp;John Smith</strong></blockquote>
+								<strong>&ndash;&nbsp;&nbsp;Lu Antal</strong></blockquote>
 							</div>
 							<div class="ballon-bgbtm">&nbsp;</div>
 							<p></p>
@@ -116,52 +116,28 @@
 					</div>
 					<div class="3u" id="box2">
 						<section>
-							<h2>Donec dictum metus</h2>
+							<h2>Especializada em:</h2>
 							<ul class="style6">
 								<li class="first">
-									<h3>Mauris vulputate dolor sit amet</h3>
-									<p><a href="#">Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum.</a></p>
+									<h3>Smash the cake</h3>
+									<p><a href="#">Seu bebê nunca se divertiu tanto (e você também não)!!!</a></p>
 								</li>
 								<li>
-									<h3>Fusce ultrices fringilla metus</h3>
-									<p><a href="#">Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum.</a></p>
+									<h3>Ensaio com gestantes</h3>
+									<p><a href="#">A maternidade é um presente de Deus, deixe registrado em lindas fotografias!</a></p>
 								</li>
 								<li>
-									<h3>Donec dictum metus in sapien</h3>
-									<p><a href="#">Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum.</a></p>
+									<h3>Ensaio com casais</h3>
+									<p><a href="#">Ah o amor! Vamos fotografar momentos de intenso carinho!</a></p>
 								</li>
 							</ul>
-						</section>
-					</div>
-					<div class="3u" id="box3">
-						<section>
-							<h2>Nulla luctus eleifend</h2>
-							<ul class="style1">
-								<li class="first"><a href="#">Maecenas luctus lectus at sapien</a></li>
-								<li><a href="#">Etiam rhoncus volutpat erat</a></li>
-								<li><a href="#">Donec dictum metus in sapien</a></li>
-								<li><a href="#">Nulla luctus eleifend purus</a></li>
-								<li><a href="#">Maecenas luctus lectus at sapien</a></li>
-								<li><a href="#">Etiam rhoncus volutpat erat</a></li>
-								<li><a href="#">Donec dictum metus in sapien</a></li>
-							</ul>
-						</section>
-					</div>
-					<div class="3u" id="box4">
-						<section>
-							<h2>Tristique eleifend</h2>
-							<p><strong>Aliquam erat volutpat. Pellentesque tristique ante ut risus. </strong></p>
-							<p>&nbsp;</p>
-							<p>Quisque dictum. Integer nisl risus, sagittis convallis, rutrum id, elementum congue, nibh. Suspendisse dictum porta lectus. </p>
-							<p>&nbsp;</p>
-							<p>Donec placerat odio vel elit. Nullam ante orci, pellentesque eget, tempus quis, ultrices in, est. Curabitur sit amet nulla. Nam in massa. Sed vel tellus. Curabitur sem urna, consequat.</p>
 						</section>
 					</div>
 				</div>
 			</div>
 		</div>
 		<div id="copyright" class="container">
-			Design: <a href="http://templated.co">TEMPLATED</a> Images: <a href="http://unsplash.com">Unsplash</a> (<a href="http://unsplash.com/cc0">CC0</a>)
+			Design: <a href="http://templated.co">Edilza Pannunzio</a> 
 		</div>
 	</body>
 </html>
