--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 			</div>
 		</div>
 		<div id="copyright" class="container">
-			Design: <a href="http://templated.co">Edilza Pannunzio</a> 
+			Design: <a href="https://github.com/epannunzio">Edilza Pannunzio</a> 
 		</div>
 	</body>
 </html>
