--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
 					</div>
 					<nav id="nav">
 						<ul>
-							<li class="current_page_item"><a href="index.html">Leia mais</a></li>
-							<li><a href="threecolumn.html">Sobre mim</a></li>
+							<li class="current_page_item"><a href="index.html">Sobre mim</a></li>
 							<li><a href="twocolumn1.html">Portfólio</a></li>
 							<li><a href="twocolumn2.html">Contato</a></li>
 						</ul>
