--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 					</div>
 					<nav id="nav">
 						<ul>
-							<li class="current_page_item"><a href="index.html">Sobre mim</a></li>
-							<li><a href="twocolumn1.html">Portfólio</a></li>
-							<li><a href="twocolumn2.html">Contato</a></li>
+							<li><a href="twocolumn1.html"><a href="index.html">Sobre mim</a></li>
+							<li><a href="twocolumn2.html">Portfólio</a></li>
+							<li><a href="twocolumn3.html">Contato</a></li>
 						</ul>
 					</nav>
 				</div>
