--- a/onecolumn.html
+++ b/onecolumn.html
@@ -65,11 +65,11 @@
 				<div class="row" id="footer-content">
 					<div class="3u" id="box1">
 						<section>
-							<h2>Maecenas luctus lectus</h2>
+							<h2>Lembre-se</h2>
 							<div class="balloon">
-								<blockquote>&ldquo;&nbsp;&nbsp;Donec leo, vivamus ullamcorper fermentum nibh in augue pulvinar ullamcorper metus praesent a lacus at urna congue ullamcorper  rutrum.&nbsp;&nbsp;&rdquo;<br>
+								<blockquote>&ldquo;&nbsp;&nbsp;Fotografar é fazer um dia especial durar pra sempre!&nbsp;&nbsp;&rdquo;<br>
 								<br>
-								<strong>&ndash;&nbsp;&nbsp;John Smith</strong></blockquote>
+								<strong>&ndash;&nbsp;&nbsp;Lu Antal</strong></blockquote>
 							</div>
 							<div class="ballon-bgbtm">&nbsp;</div>
 							<p></p>
