--- a/onecolumn.html
+++ b/onecolumn.html
@@ -77,34 +77,16 @@
 					</div>
 					<div class="3u" id="box2">
 						<section>
-							<h2>Donec dictum metus</h2>
+							<h2>Depoimentos</h2>
 							<ul class="style6">
 								<li class="first">
-									<h3>Mauris vulputate dolor sit amet</h3>
-									<p><a href="#">Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum.</a></p>
+									<h3>Edilza Rodrigues</h3>
+									<p><a href="#">Não poderia ter escolhido uma pessoa melhor! A Lu conseguiu captar exatamente oque aquele momento significou para nós!</a></p>
 								</li>
 								<li>
-									<h3>Fusce ultrices fringilla metus</h3>
-									<p><a href="#">Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum.</a></p>
+									<h3>Laura Pannunzio</h3>
+									<p><a href="#">Profissionalismo! Essa é a palavra que define o trabalho da Lu! Incrível!</a></p>
 								</li>
-								<li>
-									<h3>Donec dictum metus in sapien</h3>
-									<p><a href="#">Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum.</a></p>
-								</li>
-							</ul>
-						</section>
-					</div>
-					<div class="3u" id="box3">
-						<section>
-							<h2>Nulla luctus eleifend</h2>
-							<ul class="style1">
-								<li class="first"><a href="#">Maecenas luctus lectus at sapien</a></li>
-								<li><a href="#">Etiam rhoncus volutpat erat</a></li>
-								<li><a href="#">Donec dictum metus in sapien</a></li>
-								<li><a href="#">Nulla luctus eleifend purus</a></li>
-								<li><a href="#">Maecenas luctus lectus at sapien</a></li>
-								<li><a href="#">Etiam rhoncus volutpat erat</a></li>
-								<li><a href="#">Donec dictum metus in sapien</a></li>
 							</ul>
 						</section>
 					</div>
