--- a/onecolumn.html
+++ b/onecolumn.html
@@ -107,7 +107,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="12u">
-						<p>&copy; Your Site Name | Images: <a href="http://fotogrph.com/">Fotogrph</a> | Design: <a href="http://TEMPLATED.CO/">TEMPLATED.CO</a></p>
+						<p>&copy; Lu Antal fotografia | Design: <a href="https://github.com/epannunzio">Edilza Pannunzio</a></p>
 					</div>
 				</div>
 			</div>
