--- a/onecolumn.html
+++ b/onecolumn.html
@@ -92,8 +92,8 @@
 					</div>
 					<div class="3u" id="box4">
 						<section class="3u" id="box4">
-							<h2>Contato Whatsapp (12)9 9751-7589 <i class="fab fa-whatsapp"></i>
-							</h2>
+							<h2>Contato Whatsapp (12)9 9751-7589</h2> 
+							<i class="fab fa-whatsapp"></i>
 								<a target="_blank" href="https://www.instagram.com/luantal.fotografia/">
 									<i class="fab fa-instagram-square"></i>
 								</a>
