--- a/onecolumn.html
+++ b/onecolumn.html
@@ -94,12 +94,11 @@
 							<section class="3u" id="box4">
 						<h2>Contato Whatsapp 
 							(12)9 9751-7589</h2> 
-						      <span style="font-size: 3em; color: grey;"></span>
-							<i class="fab fa-whatsapp"></i>
-							    <a target="_blank" href="https://www.instagram.com/luantal.fotografia/">
+							<i class="fab fa-whatsapp"></i><rel='stylesheet">
+							    <a target="_blank" href="https://www.instagram.com/luantal.fotografia/"><rel="stylesheet">
 								<i class="fab fa-instagram-square"></i>
 							    </a>
-							    <a href="mailto:lucelia.antal@live.com">
+							    <a href="mailto:lucelia.antal@live.com"><rel="stylesheet">
 								<i class="fas fa-envelope-square"></i>
 							    </a>
                                                       </span>
