--- a/onecolumn.html
+++ b/onecolumn.html
@@ -15,6 +15,9 @@
 			<link rel="stylesheet" href="css/skel-noscript.css" />
 			<link rel="stylesheet" href="css/style.css" />
 			<link rel="stylesheet" href="css/style-desktop.css" />
+			<link rel="stylesheet" href="/your-path-to-fontawesome/css/fontawesome.css">
+			<link rel="stylesheet" href="/your-path-to-fontawesome/css/brands.css">
+			<link rel="stylesheet" href="/your-path-to-fontawesome/css/solid.css">
 		</noscript>
 	</head>
 	<body>
@@ -90,19 +93,18 @@
 							</ul>
 						</section>
 					</div>
-					<div class="3u" id="box4">
-							<section class="3u" id="box4">
-						<h2>Contato Whatsapp 
-							(12)9 9751-7589</h2> 
-							<i class="fab fa-whatsapp"></i><rel='stylesheet">
-							    <a target="_blank" href="https://www.instagram.com/luantal.fotografia/"><rel="stylesheet">
-								<i class="fab fa-instagram-square"></i>
-							    </a>
-							    <a href="mailto:lucelia.antal@live.com"><rel="stylesheet">
-								<i class="fas fa-envelope-square"></i>
-							    </a>
-                                                      </span>
-						</section>
+				<div class="3u" id="box4">
+					<section class="3u" id="box4">
+						<body>
+						    <h2>Contato Whatsapp 
+							    (12)9 9751-7589</h2> 
+							    <i class="fab fa-whatsapp"></i>
+								<a target="_blank" href="https://www.instagram.com/luantal.fotografia/"><rel="stylesheet">
+								<i class="fab fa-instagram-square"></i></a>
+							    <a href="mailto:lucelia.antal@live.com">
+								<i class="fas fa-envelope-square"></i></a>	
+						</body>
+					</section>
 					</div>
 				</div>
 			</div>
