--- a/twocolumn1.html
+++ b/twocolumn1.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Tapestry by TEMPLATED</title>
+		<title>Lu Antal fotografia</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -27,16 +27,15 @@
 			<div class="container">
 				<div id="header">
 					<div id="logo">
-						<h1><a href="#">Tapestry</a></h1>
-						<span>by TEMPLATED</span>
+						<h1><a href="#">Lu Antal</a></h1>
+						<span>Fotografia</span>
 					</div>
 					<nav id="nav">
 						<ul>
-							<li><a href="index.html">Homepage</a></li>
-							<li><a href="threecolumn.html">Three Column</a></li>
-							<li class="current_page_item"><a href="twocolumn1.html">Two Column #1</a></li>
-							<li><a href="twocolumn2.html">Two Column #2</a></li>
-							<li><a href="onecolumn.html">One Column</a></li>
+							<li><a href="index.html">Página inicial</a></li>
+							<li class="current_page_item"><a href="twocolumn1.html">Sobre mim</a></li>
+							<li><a href="twocolumn2.html">Portfólio</a></li>
+							<li><a href="onecolumn.html">Contato</a></li>
 						</ul>
 					</nav>
 				</div>
