--- a/twocolumn1.html
+++ b/twocolumn1.html
@@ -61,14 +61,14 @@
 						<div class="3u" id="sidebar2">
 							<section>
 								<div class="sbox1">
-									<h2>Nulla luctus eleifend</h2>
+									<h2>Meus valores</h2>
 									<ul class="style1">
-										<li class="first"><a href="#">Maecenas luctus lectus at sapien</a></li>
-										<li><a href="#">Etiam rhoncus volutpat erat</a></li>
-										<li><a href="#">Donec dictum metus in sapien</a></li>
-										<li><a href="#">Nulla luctus eleifend purus</a></li>
-										<li><a href="#">Maecenas luctus lectus at sapien</a></li>
-										<li><a href="#">Donec dictum metus in sapien</a></li>
+										<li class="first"><a href="#">Transparência</a></li>
+										<li><a href="#">Honestidade</a></li>
+										<li><a href="#">Integridade</a></li>
+										<li><a href="#">Cordialidade</a></li>
+										<li><a href="#">Pontualidade</a></li>
+										<li><a href="#">Responsabilidade</a></li>
 									</ul>
 								</div>
 							</section>
