--- a/twocolumn1.html
+++ b/twocolumn1.html
@@ -63,7 +63,7 @@
 								<div class="sbox1">
 									<h2>Meus valores</h2>
 									<ul class="style1">
-										<li class="first"><a href="#">Transparência</a></li>
+										<li class="first">Transparência</li>
 										<li><a href="#">Honestidade</a></li>
 										<li><a href="#">Integridade</a></li>
 										<li><a href="#">Cordialidade</a></li>
