--- a/twocolumn1.html
+++ b/twocolumn1.html
@@ -73,10 +73,10 @@
 								</div>
 							</section>
 							<section>
-								<h2>Fusce ultrices fringilla</h2>
+								<h2>Lindos Retratos</h2>
 								<ul class="style2">
 									<li class="first">
-										<p><a href="#"><img src="images/pics07.jpg" alt="">Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum. </a></p>
+										<p><a href="#"><img src="imagens/sabrina.jpg" alt="">Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum. </a></p>
 									</li>
 									<li>
 										<p><a href="#"><img src="images/pics08.jpg" alt="">Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum. </a></p>
