--- a/twocolumn1.html
+++ b/twocolumn1.html
@@ -76,7 +76,7 @@
 								<h2>Lindos Retratos</h2>
 								<ul class="style2">
 									<li class="first">
-										<p><a href="#"><img src="imagens/sabrina.jpg" alt="">Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum. </a></p>
+										<p><a href="#"><img src="images/sabrina.jpg" alt="">Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum. </a></p>
 									</li>
 									<li>
 										<p><a href="#"><img src="images/pics08.jpg" alt="">Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum. </a></p>
