--- a/twocolumn1.html
+++ b/twocolumn1.html
@@ -76,7 +76,7 @@
 								<h2>Lindos Retratos</h2>
 								<ul class="style2">
 									<li class="first">
-										<p><a href="#"><img src="images/sabrina.jpg" alt=""></a></p>
+										<p><img src="images/sabrina.jpg"></p>
 									</li>
 								</ul>
 							</section>
