--- a/twocolumn1.html
+++ b/twocolumn1.html
@@ -91,27 +91,27 @@
 					<div class="4u">
 						<section>
 							<div class="box-style"> <a href="#"><img src="images/pics04.jpg" alt=""></a>
-								<h3>Etiam posuere augue</h3>
-								<p>Donec nonummy magna quis risus. Quisque eleifend. </p>
-								<p class="button-style2"><a href="#">More</a></p>
+								<h3></h3>
+								<p> </p>
+								<p class="button-style2"><a href="#"></a></p>
 							</div>
 						</section>
 					</div>
 					<div class="4u">
 						<section>
 							<div class="box-style"> <a href="#"><img src="images/pics03.jpg" alt=""></a>
-								<h3>Etiam posuere augue</h3>
-								<p>Donec nonummy magna quis risus. Quisque eleifend. </p>
-								<p class="button-style2"><a href="#">More</a></p>
+								<h3></h3>
+								<p> </p>
+								<p class="button-style2"><a href="#"></a></p>
 							</div>
 						</section>
 					</div>
 					<div class="4u">
 						<section>
 							<div class="box-style"> <a href="#"><img src="images/pics05.jpg" alt=""></a>
-								<h3>Etiam posuere augue</h3>
-								<p>Donec nonummy magna quis risus. Quisque eleifend. </p>
-								<p class="button-style2"><a href="#">More</a></p>
+								<h3></h3>
+								<p></p>
+								<p class="button-style2"><a href="#"></a></p>
 							</div>
 						</section>
 					</div>
@@ -123,11 +123,11 @@
 				<div class="row" id="footer-content">
 					<div class="3u" id="box1">
 						<section>
-							<h2>Maecenas luctus lectus</h2>
+							<h2>Lembre-se</h2>
 							<div class="balloon">
-								<blockquote>&ldquo;&nbsp;&nbsp;Donec leo, vivamus ullamcorper fermentum nibh in augue pulvinar ullamcorper metus praesent a lacus at urna congue ullamcorper  rutrum.&nbsp;&nbsp;&rdquo;<br>
+								<blockquote>&ldquo;&nbsp;&nbsp;São as coisas mais simples, sempre as mais preciosas!&nbsp;&nbsp;&rdquo;<br>
 								<br>
-								<strong>&ndash;&nbsp;&nbsp;John Smith</strong></blockquote>
+								<strong>&ndash;&nbsp;&nbsp;Lu Antal</strong></blockquote>
 							</div>
 							<div class="ballon-bgbtm">&nbsp;</div>
 							<p></p>
@@ -135,45 +135,45 @@
 					</div>
 					<div class="3u" id="box2">
 						<section>
-							<h2>Donec dictum metus</h2>
+							<h2></h2>
 							<ul class="style6">
 								<li class="first">
-									<h3>Mauris vulputate dolor sit amet</h3>
-									<p><a href="#">Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum.</a></p>
+									<h3></h3>
+									<p><a href="#"></a></p>
 								</li>
 								<li>
-									<h3>Fusce ultrices fringilla metus</h3>
-									<p><a href="#">Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum.</a></p>
+									<h3></h3>
+									<p><a href="#"></a></p>
 								</li>
 								<li>
-									<h3>Donec dictum metus in sapien</h3>
-									<p><a href="#">Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum.</a></p>
+									<h3></h3>
+									<p><a href="#"></a></p>
 								</li>
 							</ul>
 						</section>
 					</div>
 					<div class="3u" id="box3">
 						<section>
-							<h2>Nulla luctus eleifend</h2>
+							<h2></h2>
 							<ul class="style1">
-								<li class="first"><a href="#">Maecenas luctus lectus at sapien</a></li>
-								<li><a href="#">Etiam rhoncus volutpat erat</a></li>
-								<li><a href="#">Donec dictum metus in sapien</a></li>
-								<li><a href="#">Nulla luctus eleifend purus</a></li>
-								<li><a href="#">Maecenas luctus lectus at sapien</a></li>
-								<li><a href="#">Etiam rhoncus volutpat erat</a></li>
-								<li><a href="#">Donec dictum metus in sapien</a></li>
+								<li class="first"><a href="#"></a></li>
+								<li><a href="#"></a></li>
+								<li><a href="#"></a></li>
+								<li><a href="#"></a></li>
+								<li><a href="#"></a></li>
+								<li><a href="#"></a></li>
+								<li><a href="#"></a></li>
 							</ul>
 						</section>
 					</div>
 					<div class="3u" id="box4">
 						<section>
-							<h2>Tristique eleifend</h2>
-							<p><strong>Aliquam erat volutpat. Pellentesque tristique ante ut risus. </strong></p>
+							<h2></h2>
+							<p><strong></strong></p>
 							<p>&nbsp;</p>
-							<p>Quisque dictum. Integer nisl risus, sagittis convallis, rutrum id, elementum congue, nibh. Suspendisse dictum porta lectus. </p>
+							<p> </p>
 							<p>&nbsp;</p>
-							<p>Donec placerat odio vel elit. Nullam ante orci, pellentesque eget, tempus quis, ultrices in, est. Curabitur sit amet nulla. Nam in massa. Sed vel tellus. Curabitur sem urna, consequat.</p>
+							<p> </p>
 						</section>
 					</div>
 				</div>
@@ -183,7 +183,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="12u">
-						<p>&copy; Your Site Name | Images: <a href="http://fotogrph.com/">Fotogrph</a> | Design: <a href="http://TEMPLATED.CO/">TEMPLATED.CO</a></p>
+						<p>&copy; Lu Antal Fotografia  Design: <a href="https://github.com/epannunzio">Edilza Pannunzio</a></p>
 					</div>
 				</div>
 			</div>
