--- a/twocolumn1.html
+++ b/twocolumn1.html
@@ -64,11 +64,11 @@
 									<h2>Meus valores</h2>
 									<ul class="style1">
 										<li class="first">Transparência</li>
-										<li><a href="#">Honestidade</a></li>
-										<li><a href="#">Integridade</a></li>
-										<li><a href="#">Cordialidade</a></li>
-										<li><a href="#">Pontualidade</a></li>
-										<li><a href="#">Responsabilidade</a></li>
+									        <li>Honestidade</li>
+										<li>Integridade</li>
+										<li>Cordialidade</li>
+										<li>Pontualidade</li>
+										<li>Responsabilidade</li>
 									</ul>
 								</div>
 							</section>
