--- a/onecolumn.html
+++ b/onecolumn.html
@@ -30,7 +30,7 @@
 					</div>
 					<nav id="nav">
 						<ul>
-							<li><a href="threecolumn.html">Página inicial</a></li>
+							<li><a href="index.html">Página inicial</a></li>
 							<li><a href="twocolumn1.html">Sobre mim</a></li>
 							<li><a href="twocolumn2.html">Portfólio</a></li>
 							<li class="current_page_item"><a href="onecolumn.html">Contato</a></li>
