--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		</div>
 		<div class="container">
 			<div class="row">
-				<div id="banner" class="12u">
+				<div id="banner" class="12u" ,banner>
 					<div class="container"><a href="#"><img src="images/lufoto.jpg" alt=""></a></div>
 				</div>
 			</div>
