--- a/twocolumn1.html
+++ b/twocolumn1.html
@@ -73,10 +73,10 @@
 								</div>
 							</section>
 							<section>
-								<h2>Lindos Retratos</h2>
+								<h2>Comprometida com você!</h2>
 								<ul class="style2">
 									<li class="first">
-										<p><img src="images/sabrina.jpg"></p>
+										<p><img src="images/lufoto.jpg"></p>
 									</li>
 								</ul>
 							</section>
