--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		<div class="container">
 			<div class="row">
 				<div id="banner" class="12u" ,banner>
-					<div class="container"><a href="#"><img src="images/lufoto.jpg" alt=""></a></div>
+					<div class="container"><a href="#"><img src="images/sabrina.jpg" alt=""></a></div>
 				</div>
 			</div>
 		</div>
