--- a/twocolumn1.html
+++ b/twocolumn1.html
@@ -73,7 +73,7 @@
 								</div>
 							</section>
 							<section>
-								<h2>Comprometida com você!</h2>
+								<h2>Comprometimento com você!</h2>
 								<ul class="style2">
 									<li class="first">
 										<p><img src="images/lufoto.jpg"></p>
