--- a/onecolumn.html
+++ b/onecolumn.html
@@ -98,7 +98,7 @@
 						<body>
 						    <h2>Contato Whatsapp 
 							    (12)9 9751-7589</h2> 
-							    <i class="fab fa-whatsapp"></i>
+							    <i class="fab fa-whatsapp-square"></i>
 								<a target="_blank" href="https://www.instagram.com/luantal.fotografia/"><rel="stylesheet">
 								<i class="fab fa-instagram-square"></i></a>
 							    <a href="mailto:lucelia.antal@live.com">
