--- a/onecolumn.html
+++ b/onecolumn.html
@@ -15,6 +15,7 @@
 			<link rel="stylesheet" href="css/skel-noscript.css" />
 			<link rel="stylesheet" href="css/style.css" />
 			<link rel="stylesheet" href="css/style-desktop.css" />
+			<script src="https://kit.fontawesome.com/f57509e80c.js" crossorigin="anonymous"></script>
 			<link rel="stylesheet" href="/your-path-to-fontawesome/css/fontawesome.css">
 			<link rel="stylesheet" href="/your-path-to-fontawesome/css/brands.css">
 			<link rel="stylesheet" href="/your-path-to-fontawesome/css/solid.css">
