--- a/onecolumn.html
+++ b/onecolumn.html
@@ -99,11 +99,11 @@
 						<body>
 						    <h2>Contato Whatsapp 
 							    (12)9 9751-7589</h2> 
-							    <i class="fab fa-whatsapp-square"></i>
+							    <i class="fab fa-whatsapp-square"></i> fa-2x
 								<a target="_blank" href="https://www.instagram.com/luantal.fotografia/"><rel="stylesheet">
-								<i class="fab fa-instagram-square"></i></a>
+								<i class="fab fa-instagram-square"></i></a> fa-2x
 							    <a href="mailto:lucelia.antal@live.com">
-								<i class="fas fa-envelope-square"></i></a>	
+								<i class="fas fa-envelope-square"></i></a> fa-2x	
 						</body>
 					</section>
 					</div>
