--- a/onecolumn.html
+++ b/onecolumn.html
@@ -98,12 +98,12 @@
 					<section class="3u" id="box4">
 						<body>
 						    <h2>Contato Whatsapp 
-							    (12)9 9751-7589</h2> 
-							    <i class="fab fa-whatsapp-square"></i> fa-2x
+							    (12)9 9751-7589</h2>
+							    <i class="fab fa-whatsapp-square"></i> 
 								<a target="_blank" href="https://www.instagram.com/luantal.fotografia/"><rel="stylesheet">
-								<i class="fab fa-instagram-square"></i></a> fa-2x
+								<i class="fab fa-instagram-square"></i></a> 
 							    <a href="mailto:lucelia.antal@live.com">
-								<i class="fas fa-envelope-square"></i></a> fa-2x	
+								<i class="fas fa-envelope-square"></i></a> 	
 						</body>
 					</section>
 					</div>
