--- a/onecolumn.html
+++ b/onecolumn.html
@@ -97,13 +97,22 @@
 				<div class="3u" id="box4">
 					<section class="3u" id="box4">
 						<body>
-						    <h2>Contato Whatsapp 
-							    (12)9 9751-7589</h2>
-							    <i class="fab fa-whatsapp-square"></i> 
-								<a target="_blank" href="https://www.instagram.com/luantal.fotografia/"><rel="stylesheet">
-								<i class="fab fa-instagram-square"></i></a> 
-							    <a href="mailto:lucelia.antal@live.com">
-								<i class="fas fa-envelope-square"></i></a> 	
+						    <h2>Contato Whatsapp (12)9 9751-7589</h2> 
+							<span class="fa-stack fa-lg">
+								<i class="fa fa-square-o fa-stack-2x"></i>
+								<i class="fa fa-twitter fa-stack-1x"></i>
+							  </span>
+							  Meu Whatsapp<br> 
+							  <span class="fa-stack fa-lg">
+								<i class="fa fa-square-o fa-stack-2x"></i>
+								<i class="fa fa-twitter fa-stack-1x"></i>
+							  </span>
+							  Siga no Instagram<br>
+							  <span class="fa-stack fa-lg">
+								<i class="fa fa-square-o fa-stack-2x"></i>
+								<i class="fa fa-twitter fa-stack-1x"></i>
+							  </span>
+							  E-mail<br> 	
 						</body>
 					</section>
 					</div>
