--- a/index.html
+++ b/index.html
@@ -57,22 +57,22 @@
 					<div class="3u">
 						<section>
 							<h2 class="title">Momentos de muito amor</h2>
-							<p><img src="images/casalbeijo.jpg" alt=""></p>
-							<p class="button-style1">ENSAIO FOTOGRÁFICO DE FAMÍLIA</p>
+							<p><a href="#"><img src="images/casalbeijo.jpg" alt=""></a></p>
+							<p class="button-style1"><a href="#">ENSAIO FOTOGRÁFICO DE FAMÍLIA</a></p>
 						</section>
 					</div>
 					<div class="3u">
 						<section>
 							<h2 class="title">Momentos inesquecíveis</h2>
-							<p><img src="images/saema.jpg" alt=""></p>
-							<p class="button-style1">ENSAIO FOTOGRÁFICO DE CASAIS</p>
+							<p><a href="#"><img src="images/saema.jpg" alt=""></a></p>
+							<p class="button-style1"><a href="#">ENSAIO FOTOGRÁFICO DE CASAIS</a></p>
 						</section>
 					</div>
 					<div class="3u">
 						<section>
 							<h2 class="title">Momentos que não tem preço</h2>
-							<p><img src="images/familia.jpg" alt=""></p>
-							<p class="button-style1">ENSAIO FOTOGRÁFICO COM RECÉM NASCIDOS</p>
+							<p><a href="#"><img src="images/familia.jpg" alt=""></a></p>
+							<p class="button-style1"><a href="#">ENSAIO FOTOGRÁFICO COM RECÉM NASCIDOS</a></p>
 						</section>
 					</div>
 				</div>
