--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 		<div id="header-wrapper">
 			<div class="container">
 				<div id="header">
-					<div id="logo">
+					<div id="titleBar" class="skel-panels-overlay skel-panels-overlay-top-left" style="backface-visibility: hidden; transition: -webkit-transform 0.25s ease-in-out 0s; z-index: 10000; position: fixed; width: 100%; height: 44px; top: 0px; left: 0px;"><span class="toggle" data-action="togglePanel" data-args="navPanel" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0); cursor: pointer;"></span><span class="title" data-action="copyHTML" data-args="logo">
 						<h1><a href="#">LU ANTAL</a></h1>
 						<span>Fotografia</span>
-					</div>
+					</span></div>
 					<nav id="nav">
 						<ul>
 							<li class="current_page_item"><a href="index.html">Página inicial</a></li>
