--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 					<div class="3u">
 						<section>
 							<h2 class="title">Momentos divertidos</h2>
-							<p><img src="images/smash.jpg" alt=""></p>
-							<p class="button-style1">SMASH THE CAKE</p>
+							<p><a href="#"><img src="images/smash.jpg" alt=""></a></p>
+							<p class="button-style1"><a href="#">SMASH THE CAKE</a></p>
 						</section>
 					</div>
 					<div class="3u">
