--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
 		<div class="container">
 			<div class="row">
 				<div id="banner" class="12u">
-					<div class="container"><a href="#"><img src="images/sabrina.jpg" alt=""></a></div>
+					<div class="container"><a href="#"><img src="images/sabrina.jpg" alt=""></a>
+						<p class="button-style1"><a href="#">ESPECIALIZADA EM RETRATOS</a></p>
+					</div>
 				</div>
 			</div>
 		</div>
