--- a/twocolumn1.html
+++ b/twocolumn1.html
@@ -156,7 +156,7 @@
 						<section>
 							<h2></h2>
 							<ul class="style1">
-								<li class="first">"Um álbum de fotos é mais doque só mais um objeto, é como um baú de tesouros!"</a></li>
+								<li class="first">"Um álbum de fotos é mais doque só um objeto, é como um baú de tesouros!"</a></li>
 								<li><a href="#"></a></li>
 								<li><a href="#"></a></li>
 								<li><a href="#"></a></li>
