--- a/onecolumn.html
+++ b/onecolumn.html
@@ -12,6 +12,7 @@
 		<script src="js/skel-panels.min.js"></script>
 		<script src="js/init.js"></script>
 		<noscript>
+			<link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
 			<link rel="stylesheet" href="css/skel-noscript.css" />
 			<link rel="stylesheet" href="css/style.css" />
 			<link rel="stylesheet" href="css/style-desktop.css" />
