--- a/onecolumn.html
+++ b/onecolumn.html
@@ -100,21 +100,18 @@
 					<section class="3u" id="box4">
 						<body>
 						    <h2>Contato Whatsapp (12)9 9751-7589</h2> 
-							<span class="fa-stack fa-lg">
-								<i class="fa fa-square-o fa-stack-2x"></i>
-								<i class="fa fa-twitter fa-stack-1x"></i>
-							  </span>
+								<i class="fab fa-whatsapp-square" aria-hidden="true"></i>
 							  Meu Whatsapp<br> 
-							  <span class="fa-stack fa-lg">
-								<i class="fa fa-square-o fa-stack-2x"></i>
-								<i class="fa fa-twitter fa-stack-1x"></i>
-							  </span>
+
+							<a target="_blank" href="https://www.instagram.com/luantal.fotografia/">
+								<i class="fab fa-instagram-square" aria-hidden="true"></i>
+							</a>
 							  Siga no Instagram<br>
-							  <span class="fa-stack fa-lg">
-								<i class="fa fa-square-o fa-stack-2x"></i>
-								<i class="fa fa-twitter fa-stack-1x"></i>
-							  </span>
-							  E-mail<br> 	
+							  
+							<a href="mailto:lucelia.antal@live.com">
+								<i class="fas fa-envelope-square" aria-hidden="true"></i>
+							</a>
+							  E-mail<br> 
 						</body>
 					</section>
 					</div>
