--- a/onecolumn.html
+++ b/onecolumn.html
@@ -100,16 +100,16 @@
 					<section class="3u" id="box4">
 						<body>
 						    <h2>Contato Whatsapp (12)9 9751-7589</h2> 
-								<i class="fab fa-whatsapp-square" aria-hidden="true"></i>
+								<i class="fab fa-whatsapp-square fa-3x" aria-hidden="true"></i>
 							  Meu Whatsapp<br> 
 
 							<a target="_blank" href="https://www.instagram.com/luantal.fotografia/">
-								<i class="fab fa-instagram-square" aria-hidden="true"></i>
+								<i class="fab fa-instagram-square fa-3x" aria-hidden="true"></i>
 							</a>
 							  Siga no Instagram<br>
 							  
 							<a href="mailto:lucelia.antal@live.com">
-								<i class="fas fa-envelope-square" aria-hidden="true"></i>
+								<i class="fas fa-envelope-square fa-3x" aria-hidden="true"></i>
 							</a>
 							  E-mail<br> 
 						</body>
