--- a/twocolumn1.html
+++ b/twocolumn1.html
@@ -157,7 +157,7 @@
 							<h2></h2>
 							<ul class="style1">
 								<li class="first">"Um álbum de fotos é mais doque só um objeto, é como um baú de tesouros!"</a></li>
-								<li><p><img src="images/algumantigo.jpg"></p></li>
+								<li><p><img src="images/albumantigo.jpg"></p></li>
 								<li><a href="#"></a></li>
 								<li><a href="#"></a></li>
 								<li><a href="#"></a></li>
