--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			<div class="container">
 				<div id="header">
 					<div id="logo">
-						<h1><a href="#">LU ANTAL</a></h1>
+						<h1><a href="#">Lu Antal</a></h1>
 						<span>Fotografia</span>
 					</div>
 					<nav id="nav">
