--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<h1><a href="#">Lu Antal</a></h1>
 						<span>Fotografia</span>
 					</div>
-					<nav id="nav">
+					<nav id="nav" menu>
 						<ul>
 							<li class="current_page_item"><a href="index.html">Página inicial</a></li>
 							<li><a href="twocolumn1.html">Sobre mim</a></li>
