--- a/onecolumn.html
+++ b/onecolumn.html
@@ -99,19 +99,21 @@
 				<div class="3u" id="box4">
 					<section class="3u" id="box4">
 						<body>
-						    <h2>Contato Whatsapp (12)9 9751-7589</h2> 
-								<i class="fab fa-whatsapp-square fa-3x" aria-hidden="true"></i>
-							  Meu Whatsapp<br> 
+						    <h2>Contato</h2> 
+							<a target="_blank" href="http://api.whatsapp.com/send?1=pt_BR&phone=5512997517589">
+							    <i class="fab fa-whatsapp-square fa-3x" aria-hidden="true"></i>
+                                                        </a>
+							Whatsapp<br> 
 
 							<a target="_blank" href="https://www.instagram.com/luantal.fotografia/">
 								<i class="fab fa-instagram-square fa-3x" aria-hidden="true"></i>
 							</a>
-							  Siga no Instagram<br>
+							Instagram<br>
 							  
 							<a href="mailto:lucelia.antal@live.com">
 								<i class="fas fa-envelope-square fa-3x" aria-hidden="true"></i>
 							</a>
-							  E-mail<br> 
+							E-mail<br> 
 						</body>
 					</section>
 					</div>
