--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 			<link rel="stylesheet" href="css/skel-noscript.css" />
 			<link rel="stylesheet" href="css/style.css" />
 			<link rel="stylesheet" href="css/style-desktop.css" />
+			<link rel="stylesheet" href="https://luantalfotografia.com/css/main.css">
 		</noscript>
 	</head>
 	<body class="homepage">
