--- a/index.html
+++ b/index.html
@@ -59,14 +59,14 @@
 					<div class="3u">
 						<section>
 							<h2 class="title">Momentos de muito amor</h2>
-							<p><a href="#"><img src="images/casalbeijo.jpg" alt=""></a></p>
+							<p><a href="#"><img src="images/familiadois.jpg" alt=""></a></p>
 							<p class="button-style1"><a href="#">ENSAIO FOTOGRÁFICO DE FAMÍLIA</a></p>
 						</section>
 					</div>
 					<div class="3u">
 						<section>
 							<h2 class="title">Momentos inesquecíveis</h2>
-							<p><a href="#"><img src="images/saema.jpg" alt=""></a></p>
+							<p><a href="#"><img src="images/casalbeijo.jpg" alt=""></a></p>
 							<p class="button-style1"><a href="#">ENSAIO FOTOGRÁFICO DE CASAIS</a></p>
 						</section>
 					</div>
