--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 					<div class="3u">
 						<section>
 							<h2 class="title">Momentos de muito amor</h2>
-							<p><a href="#"><img src="images/familiadois.jpg" alt=""></a></p>
+							<p><a href="#"><img src="images/eles.jpg" alt=""></a></p>
 							<p class="button-style1"><a href="#">ENSAIO FOTOGRÁFICO DE FAMÍLIA</a></p>
 						</section>
 					</div>
