--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 						<section>
 							<h2 class="title">Momentos de muito amor</h2>
 							<p><a href="#"><img src="images/menino.jpg" alt=""></a></p>
-							<p class="button-style1"><a href="#">ENSAIO FOTOGRÁFICO DE FAMÍLIA</a></p>
+							<p class="button-style1"><a href="#">ÁLBUM DE CASAMENTO</a></p>
 						</section>
 					</div>
 					<div class="3u">
