--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 			</div>
 		</div>
 		<div id="copyright" class="container">
-			Design: <a href="https://github.com/epannunzio">Edilza Pannunzio</a> 
+			<p>&copy; Lu Antal Fotografia | Design: <a href="https://github.com/epannunzio">Edilza Pannunzio</a></p>
 		</div>
 	</body>
 </html>
