--- a/onecolumn.html
+++ b/onecolumn.html
@@ -13,14 +13,13 @@
 		<script src="js/init.js"></script>
 		<script src="https://kit.fontawesome.com/f57509e80c.js" crossorigin="anonymous"></script>
 		<noscript>
+			<link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
 			<link rel="stylesheet" href="css/skel-noscript.css" />
 			<link rel="stylesheet" href="css/style.css" />
 			<link rel="stylesheet" href="css/style-desktop.css" />
-			<script src="https://kit.fontawesome.com/f57509e80c.js" crossorigin="anonymous"></script>
 			<link rel="stylesheet" href="/your-path-to-fontawesome/css/fontawesome.css">
 			<link rel="stylesheet" href="/your-path-to-fontawesome/css/brands.css">
 			<link rel="stylesheet" href="/your-path-to-fontawesome/css/solid.css">
-			<link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
 		</noscript>
 	</head>
 	<body>
@@ -28,7 +27,7 @@
 			<div class="container">
 				<div id="header">
 					<div id="logo">
-						<h1><a href="#">Lu Antal</a></h1>
+						<h1>Lu Antal</h1>
 						<span>Fotografia</span>
 					</div>
 					<nav id="nav">
@@ -86,11 +85,11 @@
 							<h2>Depoimentos</h2>
 							<ul class="style6">
 								<li class="first">
-									<h3>Edilza Rodrigues</h3>
+									<h3>Marta Rodrigues</h3>
 									<p><a href="#">Não poderia ter escolhido uma pessoa melhor! A Lu conseguiu captar exatamente oque aquele momento significou para nós!</a></p>
 								</li>
 								<li>
-									<h3>Laura Pannunzio</h3>
+									<h3>Claudia Santos</h3>
 									<p><a href="#">Profissionalismo! Essa é a palavra que define o trabalho da Lu! Incrível!</a></p>
 								</li>
 							</ul>
@@ -99,10 +98,10 @@
 				<div class="3u" id="box4">
 					<section class="3u" id="box4">
 						<body>
-						    <h2>Contato</h2> 
+							<h2>Contato</h2> 
 							<a target="_blank" href="http://api.whatsapp.com/send?1=pt_BR&phone=5512997517589">
 							    <i class="fab fa-whatsapp-square fa-3x" aria-hidden="true"></i>
-                                                        </a>
+                            </a>
 							Whatsapp<br> 
 
 							<a target="_blank" href="https://www.instagram.com/luantal.fotografia/">
